# swift-llbuild

./: .gitattributes  BuildFile.fbs  CMakeLists.txt  FlatBuildDB.fbs
include/llbuild/BuildSystem/: BuildDescription.h  BuildFileFormat.h
include/llbuild/Core/: BuildDB.h  BuildEngine.h  FlatBuildDBFormat.h
include/llvm/ADT/: StringRef.h
lib/BuildSystem/: BuildFile.cpp  BuildSystem.cpp  BuildSystemFrontend.cpp  CMakeLists.txt
lib/Commands/: BuildSystemCommand.cpp
lib/Core/: BuildEngine.cpp  CMakeLists.txt  FlatBuildDB.cpp  SQLiteBuildDB.cpp
products/libllbuild/: BuildDB-C-API.cpp
